@@ -32,6 +32,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-4548: Records Lost With Specific Combination of Commands and Streaming Function (knoguchi)
+
 PIG-5262: Fix jdiff related issues: fail build upon error, correct xml character escaping (szita)
 
 PIG-5225: Several unit tests are not annotated with @Test (nkollar via rohini)
